[package]
name = "smth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.38"
chrono-tz = "0.9.0"
reqwest = "0.12.7"
serde = "1.0.209"
serde_json = "1.0.128"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
tokio = "1.26.0"
tracing = "0.1.37"
